2000-11-18  Michael Yount <csf@moscow.com>

	* README.CALLING:  Somewhat outdated file describing the 
	request hash calling conventions.

	* bin/mj_shell:  Add editing support for the get-edit
	command, which wraps a file in a put command, to allow
	easy editing and replacement using your favorite editor.

	* bin/mj_wwwadm, bin/mj_wwwusr:  Rewrite.  Move all formatting
	into Mj::Format.  List explicitly the supported commands.

	* files/en/error/*:  New error files.  Allow customization
	of error messages (only two are used at present).

	* files/en/format/*:  New format files.  Allow customization
	of command output (only commands that require special
	formatting in the WWW interfaces are included at present,
	such as the configshow, lists, and show commands.)

	* files/en/help/configset_*:  Change "Variable Groups" heading
	to "Category" and revise the categories used.

	* files/en/help/configshow:  Document "categories" mode, 
	including a list of all ten categories.

	* files/en/help/get:  Document "edit" mode, which wraps a
	file with a put command, to allow easy editing and replacement.

	* lib/Majordomo.pm:  (dispatch) Improve list validation.
	(standard_subs) Add DOMAIN and PWLENGTH substitutions.
	(substitute_vars_format)  New routine.  Allows more extensive
	line-based formatting, with the following new features:
          $HELP:LOZENGE   add a hypertext link to the "lozenge" help file
          ?COMMENT        skip this line if the COMMENT substitution is empty.
        Also, if a substitution value is a list reference, the formatting
        of lines in which the variable appears will be spread over multiple
	lines, one for each array element.  For example, in the lists command,
        the DESCRIPTION substitution is a list reference.  As a result,
        the following line in the format file:
          $LIST:-23 $DESCRIPTION
        will cause the list name to be displayed only on the first line,